--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -79,11 +79,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "5\n",
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "E={}\n",
     "M={}\n",
@@ -95,10 +106,14 @@
     "        Q=[t]\n",
     "        while len(Q)>0:\n",
     "            i=Q[0]\n",
+    "            print i\n",
     "            del Q[0]\n",
     "            for j in conn[i]:\n",
     "                if j in match and not j in used:\n",
     "                    used.append(j)\n",
+    "                    if match[j] in used:\n",
+    "                        continue\n",
+    "                    used.append(match[j])\n",
     "                    Q.append(match[j])\n",
     "                    C[match[j]]=1\n",
     "for i in range(n):\n",
@@ -115,7 +130,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "E={}\n",
+    "M={}\n",
+    "C={}\n",
+    "used=[]\n",
+    "def divdfs(st,hist):\n",
+    "    global M,C\n",
+    "    if st in hist or st in C:\n",
+    "        return\n",
+    "    if st in M:\n",
+    "        del M[st]\n",
+    "    C[st]=1\n",
+    "    for i in conn[st]:\n",
+    "        if i not in match:\n",
+    "            continue\n",
+    "        if match[i]==st:\n",
+    "            continue\n",
+    "        if match[i] in C:\n",
+    "            continue\n",
+    "        if i not in C:\n",
+    "            M[i]=1\n",
+    "        divdfs(match[i],hist+[st,i])\n",
+    "    pass\n",
+    "for i in range(n):\n",
+    "    if i not in match:\n",
+    "        divdfs(i,[])\n",
+    "for i in range(n):\n",
+    "    if i not in C.keys()+M.keys():\n",
+    "        E[i]=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -124,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{9: 1, 11: 1, 16: 1, 20: 1, 26: 1, 31: 1} {2: 1, 37: 1, 7: 1, 8: 1, 10: 1, 34: 1, 24: 1} {0: 1, 1: 1, 3: 1, 4: 1, 5: 1, 6: 1, 12: 1, 13: 1, 14: 1, 15: 1, 17: 1, 18: 1, 19: 1, 21: 1, 22: 1, 23: 1, 25: 1, 27: 1, 28: 1, 29: 1, 30: 1, 32: 1, 33: 1, 35: 1, 36: 1, 38: 1, 39: 1} 40\n"
+      "{} {1: 1} {0: 1, 2: 1, 3: 1, 4: 1, 5: 1} 6\n"
      ]
     }
    ],
